# Ghasab-App

./: pyproject.toml
.github/workflows/: main.yml
Ghasab/: main.py
