[project]
name = "ghasab"
version = "0.1.0"
dependencies = [
    "flet>=0.25.0",
    "yt-dlp",
    "android-notify",
    "pyjnius"
]

[tool.flet.app]
path = "Ghasab"

[tool.flet.android]
build_sdk_version = 34
target_sdk_version = 34
permissions = [
    "INTERNET",
    "WRITE_EXTERNAL_STORAGE",
    "READ_EXTERNAL_STORAGE",
    "MANAGE_EXTERNAL_STORAGE"
]
